# devdocs-mcp

./: .gitignore  LICENSE  README.md  continuation-prompt.md  devdocs-insights.md  pyproject.toml
src/resources/templates/: base.py
tests/property/: test_templates.py
