[project]
name = "devdocs-mcp"
version = "0.1.0"
description = "An MCP server inspired by devocs.io"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hypothesis>=6.124.1",
    "pydantic>=2.10.5",
    "pytest>=8.3.4",
    "trio>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
